# RAG-Mastery

./: pyproject.toml  readme.md  requirements.txt
data/docs/: ACA02-CSE235- Introduction to deep learning-COM (1).docx
data/json_files/: data.json
data/structured_files/: community.xlsx
data/text_files/: sample_1.txt  sample_2.txt
notebooks/: VectorEmbed_Databases.ipynb  data_ingestion.ipynb
