[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "tiktoken>=0.13.0",
]
